k8s-version/auth-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thomosis-auth
  labels:
    app: thomosis-auth
    apps_name: weather-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thomosis-auth
  template:
    metadata:
      labels:
        app: thomosis-auth
        apps_name: weather-app
    spec:
      containers:
        - name: auth
          image: devopseasylearning/thomisis-auth:v0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"   # Set the initial memory request
              cpu: "100m"       # Set the initial CPU request
            limits:
              memory: "1Gi"   # Set the maximum memory limit
              cpu: "400m"       # Set the maximum CPU limit
