k8s-version/weather-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thomosis-weather
  labels:
    app: thomosis-weather
    apps_name: weather-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thomosis-weather
  template:
    metadata:
      labels:
        app: thomosis-weather
        apps_name: weather-app
    spec:
      containers:
        - name: weather
          image: devopseasylearning/thomisis-weather:v0.0.1
