k8s-version/auth-service.yml
apiVersion: v1
kind: Service
metadata:
  name: thomosis-auth
spec:
  selector:
    app: thomosis-auth
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8080
