k8s-version/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: thomosis-db
spec:
  selector:
    app: thomosis-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
