k8s-version/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: thomosis-redis
spec:
  selector:
    app: thomosis-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
