k8s-version/ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: thomosis-ui-service
spec:
  type: NodePort
  selector:
    app: thomosis-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30000  # Choose a port within the range 30000-32767
