k8s-version/weather-service.yml
apiVersion: v1
kind: Service
metadata:
  name: thomosis-weather
spec:
  selector:
    app: thomosis-weather
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
